# TravailCyTech

./: .gitmodules
S5/AnalyseImages/: notes.md
S5/Android/TP7/: settings.gradle.kts
S5/Android/TP7/app/: build.gradle.kts
S5/Android/TP7/gradle/: libs.versions.toml
S5/Android/TP7/gradle/wrapper/: gradle-wrapper.properties
S5/GameEngines/GameEngineProject/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  GameEngineProject.sln
S5/GameEngines/GameEngineProject/Assets/Animations/: CoinIdle.anim
S5/GameEngines/GameEngineProject/Assets/Materials/: Blue.mat  Gold.mat  Metal.mat  Red.mat  TrueRed.mat
S5/GameEngines/GameEngineProject/Assets/Prefabs/: Ball 1.prefab  Ball.prefab  Coin.prefab  Cube.prefab  Enemy.prefab  LevelButton.prefab  Opponent 1.prefab  Opponent.prefab  Player 1.prefab  Player 2.prefab  Player.prefab  Sphere.prefab
S5/GameEngines/GameEngineProject/Assets/Scenes/: Coins.unity  Pong.unity  SampleScene.unity  TD1.unity
S5/GameEngines/GameEngineProject/Assets/Scripts/: Ball.cs  BallThrower.cs  CharacterController.cs  Coin.cs  CoinCounter.cs  CubePlacer.cs  EnemyController.cs  GoalDetector.cs  Level.cs  LevelButton.cs  LevelManager.cs  LevelObject.cs  OpponentMovment.cs  PlayerMovement.cs  PongBall.cs  Rotation.cs  ScoreGoal.cs  UIManager.cs  (+1 more)
S5/GameEngines/GameEngineProject/ChambouleTout_Data/: boot.config  globalgamemanagers.assets  sharedassets0.assets  sharedassets0.assets.resS
S5/GameEngines/GameEngineProject/ProjectSettings/: ProjectSettings.asset
S5/GameEngines/GameEngineProject/UserSettings/: EditorUserSettings.asset
S5/IHM/: exercise_ergonomy.md
S5/MoteursPhysiques/: CMakeLists.txt
S5/MoteursPhysiques/Application/: Application.cpp  GxPlane.cpp  GxPlane.h  GxWorld.cpp  GxWorld.h
S5/MoteursPhysiques/Quantum/: QmAABB.cpp  QmAABB.h  QmBody.h  QmContact.cpp  QmContact.h  QmGravity.cpp  QmHalfspace.cpp  QmHalfspace.h  QmParticle.cpp  QmParticle.h  QmWorld.cpp  QmWorld.h
S5/OpenGL/GL4/: CMakeLists.txt  app.cpp  app.h  fbo.cpp  fbo.h  shader_class.cpp  shader_class.h
S5/OpenGL/GL4/shaders/fragments/: blur_prost.frag  cell_color.frag  cell_outline.frag  grayscale_post.frag  model_phong.frag  no_process.frag  pixelize_post.frag  shader_tex.frag  sobel_post.frag
S5/OpenGL/GL4/shaders/vertex/: cell_outline.vert  no_process.vert  shader_tex.vert
S5/ProgrammationGPU/ConstantMemoryExample/: ConstantMemoryExample.vcxproj  kernel.cu
S5/ProgrammationGPU/Exercises/: Exercises.sln  Exercises.vcxproj  kernel.cu
S5/ProgrammationGPU/Matrixmul/: Matrixmul.vcxproj  kernel.cu
S5/ProgrammationGPU/Rendu/: README.MD  TP2-RayTracer.cu
S5/ProgrammationGPU/TP1-Julia/: TP1-Julia.vcxproj  kernel.cu
S5/ProgrammationGPU/TP2-RayTracer/: TP2-RayTracer.vcxproj  kernel.cu
S5/ProgrammationGPU/TP3-Bugs/: TP3-Bugs.vcxproj  kernel.cu
S5/ProgrammationGPU/TP4-Nbody/: TP4-Nbody.vcxproj  camera.cpp  camera.h  kernel.cu
S5/ProgrammationGPU/lib/Debug/: freeglut_staticd.lib  freeglutd.exp
S5/ProgrammationGPU/lib/Release/: freeglut.exp  freeglut_static.lib
S5/ProgrammationGPU/warp/: kernel.cu  warp.vcxproj
S5/Raytracing/Raytracing1/: .gitignore  CMakeLists.txt  README.MD  Renderer.cpp  Renderer.h  camera.cpp  camera.h  main.cpp  renderer.cpp  renderer.h  scene_data.cpp  scene_data.h  shader_class.cpp  shader_class.h  vao.cpp  vao.h  vbo.cpp  vbo.h
S5/Raytracing/Raytracing1/shaders/: default.frag
S5/RecoFormes/: main.py  requirements.txt
S5/RecoFormes/opencv/: simple.ipynb
(+549 files in other folders)
